--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-html {
+body {
   font-family: "Roboto", "Noto Sans", "Helvetica", sans-serif;
   font-size: 14px;
   background-color: #3498DB;
